--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    "indent": [2, 2],
+    "indent": [2, 2, { "SwitchCase": 1 }],
     "semi": [2, "never"],
     "quotes": [2, "single"],
     "strict": [2, "never"],
